# phys-rs

./: Cargo.toml  README.md
crates/phys-rs-render/: Cargo.toml
crates/phys-rs-render/src/: color.rs  lib.rs  renderer.rs  vec2.rs
crates/phys-rs-render/src/components/: mod.rs
crates/phys-rs-render/src/components/physics/: mod.rs  spring.rs
crates/phys-rs-render/src/components/ui/: basic_data.rs  mod.rs
crates/phys-rs-render/src/pipeline/: circle.rs  grid.rs  mod.rs  poly.rs  quad.rs
crates/phys-rs-render/src/pipelines/: grid.rs  mod.rs
crates/phys-rs-render/src/shaders/: circle.wgsl  grid.wgsl  poly.wgsl  quad.wgsl
src/: main.rs
