[package]
name = "phys-rs-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.0"
wgpu = "0.14.0"
wgpu_glyph = "0.18.0"
egui = "0.19.0"
raw-window-handle = "0.5.0"
pollster = "0.3.0"
egui_winit_platform = "0.16.0"
egui_wgpu_backend = "0.20.0"

bytemuck = "1.13"